package com.org.reportes;

public enum Orientacion { VERTICAL, HORIZONTAL }
